# fmriprep-skills

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.zh.md  config.fmriprep.example.yaml  config.xcpd.example.yaml  pyproject.toml
docs/: issue-codes.en.md  issue-codes.zh.md
skills/fmri-followup/: SKILL.md
skills/fmri-followup/references/: run-inspection-fmriprep.md  run-inspection-xcpd.md  run-inspection.md
skills/fmri-process/: SKILL.md
skills/fmri-process/references/common/: append-harness-trace.py  arguments.md  audit-report.md  cli.md  config.md  execution-report.md  harness-trace.md  path-preflight-unresolved.md  path-preflight.md  prepare-image.md  prepare-runtime.md  prepare-templateflow.md  saved-execution.md
skills/fmri-process/references/fmriprep/: custom-args.md  dataset-audit.md  fmriprep-args.md  route.md  runtime-audit.md  saved-continuation.md  saved-exec.md  workflow-gates.md
skills/fmri-process/references/xcpd/: artifacts.md  custom-args.md  route.md  run-xcpd.md  xcpd-args.md  xcpd-audit.md
src/fmri_core/: __init__.py  audit.py  dataset_audit.py  disk.py  image_audit.py  image_metadata.py  issue_codes.py  models.py  monitor.py  path_probe.py  pipelines.py  run.py  runtime_audit.py  runtime_probe.py  runtime_proofs.py  shell.py  storage_check.py  templateflow_audit.py
src/fmri_core/resources/: issue_catalog.json  storage_check_inventory.json
src/fmri_process/: __init__.py  cli.py  execution_flow.py  request_config.py  xcpd_context.py
